Bug #21378  Alter table from X storage engine to NDB could cause data loss: Added warning if local table shadows ndb table